--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,5 +47,5 @@ jobs:
         script: |
           docker stop partida-aula
           docker rm --force partida-aula
-          docker run -d -p 8080:8080 --name partida-aula alemagno10/partida-05-ci:${{ github.sha }}
+          docker run -e MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} -d -p 8080:8080 --name partida-aula alemagno10/partida-05-ci:${{ github.sha }}
 
