--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -1,33 +1,38 @@
-name: Measure coverage
+name: Jacoco
 
 on:
   pull_request:
+    branches: [ "master" ]
 
 jobs:
-  build:
+  maven-build:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-      - name: Add coverage to PR
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.6.1
-        with:
-          paths: |
-            ${{ github.workspace }}/**/target/test-results/jacoco/jacoco.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 20
-          min-coverage-changed-files: 20
-          
-      - name: Fail PR if overall coverage is less than 20%
-        if: ${{ steps.jacoco.outputs.coverage-overall < 20.0 }}
-        uses: actions/github-script@v6
-        with:
+    - name: Add coverage to PR
+      id: jacoco
+      uses: madrapps/jacoco-report@v1.6.1
+      with:
+        paths: |
+          ${{ github.workspace }}/**/target/test-results/jacoco/jacoco.xml
+        token: ${{ secrets.GITHUB_TOKEN }}
+        min-coverage-overall: 20
+        min-coverage-changed-files: 20
+
+    - name: Fail PR if overall coverage is less than 20%
+      if: ${{ steps.jacoco.outputs.coverage-overall < 20.0 }}
+      uses: actions/github-script@v6
+      with:
+        script: |
+          core.setFailed('Overall coverage is less than 20%!')
           script: |
             core.setFailed('Overall coverage is less than 20%!')
